// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Separator renders correctly horizontally 1`] = `
<DocumentFragment>
  .cache-t2u5cx-StyledHr {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #d9dadd;
}

<hr
    aria-orientation="horizontal"
    class="cache-t2u5cx-StyledHr e1d1zom90"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Separator renders correctly vertically 1`] = `
<DocumentFragment>
  .cache-1eogk8l-StyledHr {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #d9dadd;
}

<hr
    aria-orientation="vertical"
    class="cache-1eogk8l-StyledHr e1d1zom90"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Separator renders correctly with custom color 1`] = `
<DocumentFragment>
  .cache-1xrv66a-StyledHr {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #521094;
}

<hr
    aria-orientation="horizontal"
    class="cache-1xrv66a-StyledHr e1d1zom90"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Separator renders correctly with custom color and icon 1`] = `
<DocumentFragment>
  .cache-1gpqkcp-StyledIconWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1inhs19-StyledHr {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #521094;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-a8fn16-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: #521094;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  fill: #521094;
}

<div
    aria-orientation="horizontal"
    class="cache-1gpqkcp-StyledIconWrapper e1d1zom92"
    role="separator"
  >
    <hr
      class="cache-1inhs19-StyledHr e1d1zom90"
    />
    <svg
      class="e1d1zom91 cache-a8fn16-StyledIcon-sizeStyles-StyledIcon e5nqbfp0"
      viewBox="0 0 24 24"
    >
      <path
        d="M1,12L5,16V13H17.17C17.58,14.17 18.69,15 20,15A3,3 0 0,0 23,12A3,3 0 0,0 20,9C18.69,9 17.58,9.83 17.17,11H5V8L1,12Z"
        style="transform: rotate(-90deg); transform-origin: 50% 50%;"
      />
    </svg>
    <hr
      class="cache-1inhs19-StyledHr e1d1zom90"
    />
  </div>
</DocumentFragment>
`;

exports[`Separator renders correctly with custom icon 1`] = `
<DocumentFragment>
  .cache-1gpqkcp-StyledIconWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-o8o6e4-StyledHr {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #d9dadd;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1g0ooxu-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: #464959;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  fill: #d9dadd;
}

<div
    aria-orientation="horizontal"
    class="cache-1gpqkcp-StyledIconWrapper e1d1zom92"
    role="separator"
  >
    <hr
      class="cache-o8o6e4-StyledHr e1d1zom90"
    />
    <svg
      class="e1d1zom91 cache-1g0ooxu-StyledIcon-sizeStyles-StyledIcon e5nqbfp0"
      viewBox="0 0 24 24"
    >
      <path
        d="M1,12L5,16V13H17.17C17.58,14.17 18.69,15 20,15A3,3 0 0,0 23,12A3,3 0 0,0 20,9C18.69,9 17.58,9.83 17.17,11H5V8L1,12Z"
        style="transform: rotate(-90deg); transform-origin: 50% 50%;"
      />
    </svg>
    <hr
      class="cache-o8o6e4-StyledHr e1d1zom90"
    />
  </div>
</DocumentFragment>
`;

exports[`Separator renders correctly with custom icon horizontally 1`] = `
<DocumentFragment>
  .cache-1gpqkcp-StyledIconWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-o8o6e4-StyledHr {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #d9dadd;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1g0ooxu-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: #464959;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  fill: #d9dadd;
}

<div
    aria-orientation="horizontal"
    class="cache-1gpqkcp-StyledIconWrapper e1d1zom92"
    role="separator"
  >
    <hr
      class="cache-o8o6e4-StyledHr e1d1zom90"
    />
    <svg
      class="e1d1zom91 cache-1g0ooxu-StyledIcon-sizeStyles-StyledIcon e5nqbfp0"
      viewBox="0 0 24 24"
    >
      <path
        d="M1,12L5,16V13H17.17C17.58,14.17 18.69,15 20,15A3,3 0 0,0 23,12A3,3 0 0,0 20,9C18.69,9 17.58,9.83 17.17,11H5V8L1,12Z"
        style="transform: rotate(-90deg); transform-origin: 50% 50%;"
      />
    </svg>
    <hr
      class="cache-o8o6e4-StyledHr e1d1zom90"
    />
  </div>
</DocumentFragment>
`;

exports[`Separator renders correctly with custom icon vertically 1`] = `
<DocumentFragment>
  .cache-15vpxe5-StyledIconWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-mnsfne-StyledHr {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #d9dadd;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1g0ooxu-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: #464959;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  fill: #d9dadd;
}

<div
    aria-orientation="vertical"
    class="cache-15vpxe5-StyledIconWrapper e1d1zom92"
    role="separator"
  >
    <hr
      class="cache-mnsfne-StyledHr e1d1zom90"
    />
    <svg
      class="e1d1zom91 cache-1g0ooxu-StyledIcon-sizeStyles-StyledIcon e5nqbfp0"
      viewBox="0 0 24 24"
    >
      <path
        d="M1,12L5,16V13H17.17C17.58,14.17 18.69,15 20,15A3,3 0 0,0 23,12A3,3 0 0,0 20,9C18.69,9 17.58,9.83 17.17,11H5V8L1,12Z"
        style="transform: rotate(-90deg); transform-origin: 50% 50%;"
      />
    </svg>
    <hr
      class="cache-mnsfne-StyledHr e1d1zom90"
    />
  </div>
</DocumentFragment>
`;

exports[`Separator renders correctly with custom thickness 1`] = `
<DocumentFragment>
  .cache-1669bo1-StyledHr {
  margin: 0;
  border: 0;
  width: auto;
  height: 3px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #d9dadd;
}

<hr
    aria-orientation="horizontal"
    class="cache-1669bo1-StyledHr e1d1zom90"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Separator renders correctly with default props 1`] = `
<DocumentFragment>
  .cache-t2u5cx-StyledHr {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #d9dadd;
}

<hr
    aria-orientation="horizontal"
    class="cache-t2u5cx-StyledHr e1d1zom90"
    role="separator"
  />
</DocumentFragment>
`;
